# hello-deep-learning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.md  package.json  pyproject.toml  附录-LLM原理入门.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
.vitepress/: config.ts  sidebar.ts
.vitepress/theme/: custom.css
ch01-python基础/: 01-什么是python.md  02-numpy基础.md  03-matplotlib绘图.md  04-开发环境配置详解.md
ch02-感知机/: 01-感知机是什么.md  02-简单逻辑电路实现.md  03-感知机的局限性.md
ch02-感知机/code/: perceptron.py
ch03-神经网络/: 01-神经网络基础.md  02-激活函数.md  03-多维数组的矩阵运算.md  04-手写数字识别推理.md
ch03-神经网络/code/: neural_net_inference.py
ch04-神经网络的学习/: 01-从数据中学习.md  02-损失函数.md  03-数值微分.md  04-学习算法实现.md
ch04-神经网络的学习/code/: learning.py
ch05-误差反向传播法/: 01-计算图.md  02-链式法则.md  03-反向传播实现.md
ch05-误差反向传播法/code/: backprop.py
ch06-学习技巧/: 01-参数优化方法.md  02-权重初始值.md  03-Batch Normalization.md  04-正则化与过拟合.md  05-残差连接.md
ch06-学习技巧/code/: optimizers.py
ch07-卷积神经网络/: 01-全连接层的问题.md  02-卷积层与池化层.md  03-CNN实现.md
ch08-深度学习进阶/: 01-更深的网络.md  02-超参数调优.md  03-从零开始深度学习总结.md
ch09-循环神经网络/: 01-序列数据是什么.md  02-循环神经网络原理.md  03-长短期记忆网络.md  04-门控循环单元.md  05-文本预测实战.md
ch10-注意力机制/: 01-注意力是什么.md  02-注意力计算方式.md  03-自注意力.md  04-多头注意力.md  05-Transformer架构.md  06-位置嵌入.md  07-GPT架构详解.md  08-长文本处理.md  09-MoE混合专家.md  10-语言生成机制.md
ch11-计算机视觉进阶/: 01-图像增广.md  02-微调预训练模型.md  03-目标检测入门.md  04-语义分割.md  05-风格迁移.md
ch12-自然语言处理/: 00-嵌入基础.md  01-词嵌入.md  02-预训练语言模型.md  03-情感分析.md  04-文本分类实战.md  05-深度学习展望.md  06-子词分词器.md
docs/: FINAL-REVIEW-最终成果报告.md  LLM原理完整图解.md  VSCode-Jupyter配置指南.md  零基础学习指南.md
(+20 files in other folders)
