[project]
name = "hello-deep-learning"
version = "0.1.0"
description = "从零开始深度学习学习笔记"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "jupyter>=1.1",
    "notebook>=7.0",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ipython>=9.0",
]

[tool.uv]
cache-dir = ".uv-cache"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
